Switch from karma to web-test-runner (#704)
* Switch from karma to web-test-runner

* Fix installing playwright browser

* Update doc and fix installing chromium

* Align browser name with playwright naming

* Fix inconsistency in commands package

* Add note on playwright cache

Co-authored-by: gabalafou <gabriel@fouasnon.com>

* Add note to install pw browsers

* Lint contributing.md

* Recommend npx rather than yarn to install web browsers

* [skip ci] Apply suggestions from code review

Co-authored-by: gabalafou <gabriel@fouasnon.com>

* Add playwright as root dev dependency

* More robust tests

Co-authored-by: gabalafou <gabriel@fouasnon.com>

---------

Co-authored-by: Frédéric Collonval <fcollonval@users.noreply.github.com>
Co-authored-by: gabalafou <gabriel@fouasnon.com>

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "clean": "lerna run clean",
     "clean:examples": "lerna run clean --scope \"@lumino/example-*\"",
     "clean:src": "lerna run clean --scope \"@lumino/!(test-|example-)*\"",
-    "clean:tests": "lerna run clean:tests",
+    "clean:test": "lerna run clean:test",
     "predocs": "lerna run build:src",
     "docs": "typedoc",
     "eslint": "eslint --ext .js,.jsx,.ts,.tsx --cache --fix .",
@@ -31,20 +31,18 @@
     "prettier:check": "prettier --check \"**/*{.ts,.tsx,.js,.jsx,.css,.json,.md}\"",
     "publish": "npm run clean && npm run build:dist && node scripts/tag-versions.js && lerna publish --yes -m \"Publish\" from-package",
     "remove:dependency": "remove-dependency",
-    "test": "lerna run test --scope \"@lumino/!(example-)*\"",
-    "test:chrome": "lerna run test:chrome",
-    "test:chrome-headless": "lerna run test:chrome-headless",
+    "test": "lerna run test --concurrency 1 --scope \"@lumino/!(example-)*\"",
+    "test:chromium": "lerna run test:chromium --concurrency 1",
     "test:examples": "lerna run test --scope \"@lumino/example-*\"",
-    "test:firefox": "lerna run test:firefox",
-    "test:firefox-headless": "lerna run test:firefox-headless",
+    "test:firefox": "lerna run test:firefox --concurrency 1",
     "test:webkit": "lerna run test:webkit --concurrency 1",
-    "test:webkit-headless": "lerna run test:webkit-headless --concurrency 1",
     "update:dependency": "update-dependency --lerna",
     "update:versions": "lerna version --no-push --no-git-tag-version",
     "prepare": "husky install"
   },
   "devDependencies": {
     "@jupyterlab/buildutils": "^4.0.0",
+    "@playwright/test": "^1.44.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.45.0",
