--- a/packages/algorithm/package.json
+++ b/packages/algorithm/package.json
@@ -27,16 +27,14 @@
     "build": "npm run build:src && rollup -c",
     "build:src": "tsc --build",
     "build:test": "npm run clean:test && tsc --build tests && cd tests && rollup -c",
-    "clean": "rimraf ./lib && rimraf *.tsbuildinfo && rimraf ./types && rimraf ./dist",
+    "clean": "rimraf ./lib *.tsbuildinfo ./types ./dist",
     "clean:test": "rimraf tests/lib tests/tsconfig.tsbuildinfo",
     "minimize": "terser dist/index.js -c -m --source-map \"content='dist/index.js.map',url='index.min.js.map'\" -o dist/index.min.js",
-    "test": "npm run test:firefox-headless",
-    "test:chrome": "cd tests && karma start --browsers=Chrome",
-    "test:chrome-headless": "cd tests && karma start --browsers=ChromeHeadless",
-    "test:firefox": "cd tests && karma start --browsers=Firefox",
-    "test:firefox-headless": "cd tests && yarn karma start --browsers=FirefoxHeadless",
-    "test:webkit": "cd tests && karma start --browsers=Webkit",
-    "test:webkit-headless": "cd tests && karma start --browsers=WebkitHeadless",
+    "test": "npm run build:test && web-test-runner tests/lib/bundle.test.js --node-resolve --playwright",
+    "test:debug": "npm run test -- --manual --open",
+    "test:chromium": "npm run test -- --browsers chromium",
+    "test:firefox": "npm run test -- --browsers firefox",
+    "test:webkit": "npm run test -- --browsers webkit",
     "watch": "tsc --build --watch"
   },
   "devDependencies": {
@@ -46,15 +44,10 @@
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@types/chai": "^4.3.4",
     "@types/mocha": "^2.2.39",
+    "@web/test-runner": "^0.18.2",
+    "@web/test-runner-playwright": "^0.11.0",
     "chai": "^4.3.4",
-    "karma": "^6.3.4",
-    "karma-chrome-launcher": "^3.1.0",
-    "karma-firefox-launcher": "^2.1.1",
-    "karma-mocha": "^2.0.1",
-    "karma-mocha-reporter": "^2.2.5",
-    "karma-webkit-launcher": "^1.0.2",
     "mocha": "^9.0.3",
-    "playwright": "^1.35.0",
     "postcss": "^8.4.24",
     "rimraf": "^5.0.1",
     "rollup": "^3.25.1",
