Don't bail early when running all tests

--- a/package.json
+++ b/package.json
@@ -31,11 +31,11 @@
     "prettier:check": "prettier --check \"**/*{.ts,.tsx,.js,.jsx,.css,.json,.md}\"",
     "publish": "npm run clean && npm run build:dist && node scripts/tag-versions.js && lerna publish --yes -m \"Publish\" from-package",
     "remove:dependency": "remove-dependency",
-    "test": "lerna run test --concurrency 1 --scope \"@lumino/!(example-)*\"",
-    "test:chromium": "lerna run test:chromium --concurrency 1",
-    "test:examples": "lerna run test --scope \"@lumino/example-*\"",
-    "test:firefox": "lerna run test:firefox --concurrency 1",
-    "test:webkit": "lerna run test:webkit --concurrency 1",
+    "test": "lerna run test --concurrency 1 --no-bail --scope \"@lumino/!(example-)*\"",
+    "test:chromium": "lerna run test:chromium --no-bail --concurrency 1",
+    "test:examples": "lerna run test --no-bail --scope \"@lumino/example-*\"",
+    "test:firefox": "lerna run test:firefox --no-bail --concurrency 1",
+    "test:webkit": "lerna run test:webkit --no-bail --concurrency 1",
     "update:dependency": "update-dependency --lerna",
     "update:versions": "lerna version --no-push --no-git-tag-version",
     "prepare": "husky install"
