"npm run" -> yarn
If we are using yarn, then it should be everywhere.
Without this, binary resolution fails on Windows.

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   ],
   "scripts": {
     "api": "lerna run api",
-    "build": "npm run build:src",
-    "build:dist": "npm run build && npm run minimize",
+    "build": "yarn build:src",
+    "build:dist": "yarn build && yarn minimize",
     "build:examples": "lerna run build --scope \"@lumino/example-*\" --concurrency 1",
     "build:src": "lerna run build --scope \"@lumino/!(test-|example-)*\" --concurrency 1",
     "build:test": "lerna run build:test",
@@ -29,7 +29,7 @@
     "minimize": "lerna run minimize",
     "prettier": "prettier --write \"**/*{.ts,.tsx,.js,.jsx,.css,.json,.md}\"",
     "prettier:check": "prettier --check \"**/*{.ts,.tsx,.js,.jsx,.css,.json,.md}\"",
-    "publish": "npm run clean && npm run build:dist && node scripts/tag-versions.js && lerna publish --yes -m \"Publish\" from-package",
+    "publish": "yarn clean && yarn build:dist && node scripts/tag-versions.js && lerna publish --yes -m \"Publish\" from-package",
     "remove:dependency": "remove-dependency",
     "test": "lerna run test --concurrency 1 --no-bail --scope \"@lumino/!(example-)*\"",
     "test:chromium": "lerna run test:chromium --no-bail --concurrency 1",
