--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -144,7 +144,7 @@ jobs:
             data = json.load(f)
 
           data["version"] = datetime.now().strftime("%Y.%m.%d")
-          data["jupyter-releaser"] = { "options": { "version-cmd": "npm run update:versions -- --yes" } }
+          data["jupyter-releaser"] = { "options": { "version-cmd": "yarn update:versions -- --yes" } }
 
           with open("package.json", "w") as f:
             data = json.dump(data, f)
