--- a/packages/coreutils/package.json
+++ b/packages/coreutils/package.json
@@ -26,17 +26,17 @@
   ],
   "scripts": {
     "api": "api-extractor run --local --verbose",
-    "build": "npm run build:src && rollup -c",
+    "build": "yarn build:src && rollup -c",
     "build:src": "tsc --build",
-    "build:test": "npm run clean:test && tsc --build tests && cd tests && rollup -c",
+    "build:test": "yarn clean:test && tsc --build tests && cd tests && rollup -c",
     "clean": "rimraf ./lib *.tsbuildinfo ./types ./dist",
     "clean:test": "rimraf tests/lib tests/tsconfig.tsbuildinfo",
     "minimize": "terser dist/index.js -c -m --source-map \"content='dist/index.js.map',url='index.min.js.map'\" -o dist/index.min.js",
-    "test": "npm run build:test && web-test-runner tests/lib/bundle.test.js --node-resolve --playwright",
-    "test:debug": "npm run test -- --manual --open",
-    "test:chromium": "npm run test -- --browsers chromium",
-    "test:firefox": "npm run test -- --browsers firefox",
-    "test:webkit": "npm run test -- --browsers webkit",
+    "test": "yarn build:test && web-test-runner tests/lib/bundle.test.js --node-resolve --playwright",
+    "test:chromium": "yarn test -- --browsers chromium",
+    "test:debug": "yarn test -- --manual --open",
+    "test:firefox": "yarn test -- --browsers firefox",
+    "test:webkit": "yarn test -- --browsers webkit",
     "watch": "tsc --build --watch"
   },
   "dependencies": {
