Run `license-header` workflow on `ubuntu-latest`

--- a/.github/workflows/license-header.yml
+++ b/.github/workflows/license-header.yml
@@ -9,7 +9,7 @@ permissions:
 
 jobs:
   header-license-fix:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
