--- a/packages/widgets/tsconfig.json
+++ b/packages/widgets/tsconfig.json
@@ -6,7 +6,7 @@
     "outDir": "lib",
     "rootDir": "src"
   },
-  "include": ["src/*", "../coreutils/src/selector.ts"],
+  "include": ["src/*"],
   "references": [
     {
       "path": "../algorithm"
